Fixed horizontal scroll in Navbar at 380px size and less

--- a/src/components/Header/Navbar/Search/Search.module.scss
+++ b/src/components/Header/Navbar/Search/Search.module.scss
@@ -1,61 +1,61 @@
 .SearchItem {
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    font-size: 16px;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  font-size: 16px;
 
-    @media screen and (max-width: 576px){
-        font-size: 0;
-    }
+  @media screen and (max-width: 576px) {
+    font-size: 0;
+    padding-left: 0;
+    padding-right: 0;
+    margin-right: 10px;
+  }
 
-    svg {
-        width: 16px;
-        height: 16px;
-        margin-right: 5px;
-        fill: #7b7b7b;
-    }
+  svg {
+    width: 16px;
+    height: 16px;
+    margin-right: 5px;
+    fill: #7b7b7b;
+  }
 }
 .Search {
-    width: 100%;
-    height: 500px;
-    background-color: #fff;
-    display: flex;
-    justify-content:center;
-    align-items:center;
-    flex-direction: column;
-    position: absolute;
-    top: 80px;
-    left: 0;
-    z-index: 1;
-       
-        .InputFieldPosition{
-            position: relative;
-            .InputField {
-                border: none;
-                border-bottom: 2px solid #3F3D3D;
-                background-color: rgba(0,0,0,0);
-                outline: none; 
-            }
-            .CloseSearch{
-                display: none;
-                @media screen and (max-width: 576px) {
-                    display: block;
-                    position: absolute;
-                    top: 0;
-                    right: 0;
-                   }
-            }
+  width: 100%;
+  height: 500px;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  top: 80px;
+  left: 0;
+  z-index: 1;
 
-        }
-        
-        .SearchBtn {
-           display: none;
-           margin-top: 100px;
-           @media screen and (max-width: 576px) {
-            display: block;
-           }
-        }
+  .InputFieldPosition {
+    position: relative;
+    .InputField {
+      border: none;
+      border-bottom: 2px solid #3f3d3d;
+      background-color: rgba(0, 0, 0, 0);
+      outline: none;
+    }
+    .CloseSearch {
+      display: none;
+      @media screen and (max-width: 576px) {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+      }
+    }
+  }
+
+  .SearchBtn {
+    display: none;
+    margin-top: 100px;
+    @media screen and (max-width: 576px) {
+      display: block;
+    }
+  }
 }
-
-
